<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/bott_wait"
        android:title="Ожидаемые"
        android:icon="@drawable/wait"/>
    <item android:id="@+id/bott_top"
        android:title="Топ рейтинг"
        android:icon="@drawable/rate"/>
</menu>