<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="123dp"
        android:layout_height="130dp"
        android:visibility="visible"
        android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleWait"
        android:layout_width="match_parent"
        android:layout_height="720dp" />

</FrameLayout>